--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -124,7 +124,7 @@ body {
   box-sizing: border-box;
   overflow-x: hidden;
   line-height: 1;
-  background-color: var(--blue-dark);
+  background-color: var(--blue-dark-shadow);
   font-family: "Atkinson";
 }
 
@@ -273,7 +273,7 @@ header #logo svg image {
 header #logo h1 {
   color: var(--blue-dark);
   font-family: "Josefin Sans", sans-serif;
-  font-size: clamp(2rem, 8vw + 1rem, 4.5rem);
+  font-size: clamp(1.5rem, 5vw + 1rem, 4.5rem);
   font-weight: 700;
   padding-bottom: 10px;
   transition: transform 1s ease;
@@ -356,7 +356,7 @@ header .nav-bar ul .login {
   transform: scale(0.6) translateY(-25px);
 }
 .header-on-scroll #logo h1 {
-  transform: scale(0.6) translateY(-12px) translateX(-120px);
+  transform: scale(0.7) translateY(-12px) translateX(-60px);
 }
 
 .container {
